@@ -6,18 +6,20 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.ArrayList;
 
 @Document(collection = "users")
 public class User implements UserDetails {
     @Id
-    private String id;
+    private String _id;
+    private int id;
     private String username;
-    private String password;
     private String fullName;
     private String email;
     private String phoneNumber;
+    private String password;
     private String role;
     private String createdAt;
     private String profilePicture;
@@ -25,7 +27,7 @@ public class User implements UserDetails {
 
     public User() {}
     public User(String id, String username, String password, String fullName, String email, String phoneNumber, String role, String createdAt) {
-        this.id = id;
+        this._id = id;
         this.username = username;
         this.password = password;
         this.fullName = fullName;
@@ -36,22 +38,22 @@ public class User implements UserDetails {
         this.favourites = new ArrayList<>();
         this.profilePicture = "https://cdn-icons-png.flaticon.com/512/706/706830.png"; // Default avatar
     }
-    public String getId() { return id; }
-    public void setId(String id) { this.id = id; }
+    public String get_id() { return _id; }
+    public void set_id(String _id) { this._id = _id; }
+    public int getId() { return id; }
+    public void setId(int id) { this.id = id; }
     public String getUsername() { return username; }
     public void setUsername(String username) { this.username = username; }
-    public String getPassword() { return password; }
-    public void setPassword(String password) { this.password = password; }
     public String getFullName() { return fullName; }
     public void setFullName(String fullName) { this.fullName = fullName; }
     public String getEmail() { return email; }
     public void setEmail(String email) { this.email = email; }
     public String getPhoneNumber() { return phoneNumber; }
     public void setPhoneNumber(String phoneNumber) { this.phoneNumber = phoneNumber; }
+    public String getPassword() { return password; }
+    public void setPassword(String password) { this.password = password; }
     public String getRole() { return role; }
-    public void setRole(String role) { 
-        this.role = role.startsWith("ROLE_") ? role.substring(5) : role;
-    }
+    public void setRole(String role) { this.role = role; }
     public String getCreatedAt() { return createdAt; }
     public void setCreatedAt(String createdAt) { this.createdAt = createdAt; }
     public List<String> getFavourites() { return favourites; }
@@ -61,7 +63,7 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + this.role.toUpperCase()));
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
     }
     @Override
     public boolean isAccountNonExpired() { return true; }
